Added body elements to index.html file, added an image, styled wells, rows, and colomns.

--- a/index.html
+++ b/index.html
@@ -5,3 +5,35 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
+  <div class="container">
+    <div class="row">
+      <body class="background">
+
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="well">
+                <h3 class="profile"> A BIT ABOUT ME: </h3>
+                <p> Hello, Welcome to my digital landing pad! I am pleased for you to see this page. I am a 25 year old creator living in Portland OR. I recently graduated from Lewis and Clark college with a Bachelors in Fine Arts. </p>
+              </div>
+            </div>
+            <div class="col-md-8">
+              <img class="self" src="https://static1.squarespace.com/static/578943d28419c2f2c872391f/5a209e160852299886f0a368/5a209e809140b77b54927cf7/1512087172731/Screen+Shot+2017-11-17+at+10.28.04+PM.png?format=500w">
+            </div>
+          </div>
+            <div class="row">
+              <div class="col-md-10">
+                <div class="well">
+                  <h3> CURRENT WORK PORTFOLIO:</h3>
+                  <ul>
+                    <li> Aethetics Web Page: <a href="https://lmkirkiii.github.io/A-E-S-T-H-E-T-I-C-WEB-PAGE/"> Link here!</a>
+                    <p> This page contains an exploration of grafic aesthetic sytles. Applied languages for the site: "css/html"</p>
+                  </ul>
+                </div>
+              </div>
+          </div>
+        </div>
+      </body>
+    </div>
+  </div>
+</html>
