Added more styling elements and began to implement links to other repositorys in the PORTFOLIO SECTION

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <div class="container">
     <div class="row">
       <body class="background">
+        <h1 class="jumbotron"> LAWRENCE KIRK: CREATIVE DEVELOPMENT</h1>
         <div class="container">
           <div class="row">
             <div class="col-md-4">
