added some cascading css and spans to bolster style of the project.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <div class="container">
     <div class="row">
       <body class="background">
-        <h1 class="jumbotron"> LAWRENCE KIRK: CREATIVE DEVELOPMENT</h1>
+        <h1 class="jumbotron"> <span class="red">LAWRENCE KIRK: CREATIVE DEVELOPMENT</span></h1>
         <div class="container">
           <div class="row">
             <div class="col-md-4">
               <div class="well">
-                <h3 class="profile"> A BIT ABOUT ME: </h3>
+                <h3 class="profile"><span class="red"> A BIT ABOUT ME</span> </h3>
                 <p> Hello, Welcome to my digital landing pad! I am pleased for you to see this page. I am a 25 year old creator living in Portland OR. I recently graduated from Lewis and Clark college with a Bachelors in Fine Arts. </p>
+                <p> Here are a few of my skills:</p>
               </div>
             </div>
             <div class="col-md-8">
@@ -24,11 +25,14 @@
             <div class="row">
               <div class="col-md-10">
                 <div class="well">
-                  <h3> CURRENT WORK PORTFOLIO:</h3>
-                  <ul>
-                    <li> Aethetics Web Page: <a href="https://lmkirkiii.github.io/A-E-S-T-H-E-T-I-C-WEB-PAGE/"> Link here!</a>
-                    <p> This page contains an exploration of grafic aesthetic sytles. Applied languages for the site: "css/html"</p>
-                  </ul>
+                  <h3><span class="red">CURRENT WORK PORTFOLIO</span></h3>
+                  <ol>
+                    <li> Aethetics Web Page: <a href="https://lmkirkiii.github.io/A-E-S-T-H-E-T-I-C-WEB-PAGE/"><em><strong>Link here!</strong></em></a>
+                    <p> This site contains an exploration of grafic aesthetic sytles. Applied languages for the site: "css/html"</p>
+                    <li> Digital Art Museum: <a href="https://lmkirkiii.github.io/MUSE/"><em><strong>Link here!</strong></em></a>
+                    <p> This site is a non-profit css/html based digital art museum.</p>
+
+                  </ol>
                 </div>
               </div>
           </div>
