add text to a read me on the site and add some extra css styles.

--- a/index.html
+++ b/index.html
@@ -8,34 +8,43 @@
   <div class="container">
     <div class="row">
       <body class="background">
-        <h1 class="jumbotron"> <span class="red">LAWRENCE KIRK: CREATIVE DEVELOPMENT</span></h1>
+        <h1 class="jumbotron"> <span class="red">LAWRENCE KIRK ~ CREATIVE DEVELOPMENT</span></h1>
         <div class="container">
           <div class="row">
             <div class="col-md-4">
               <div class="well">
                 <h3 class="profile"><span class="red"> A BIT ABOUT ME</span> </h3>
                 <p> Hello, Welcome to my digital landing pad! I am pleased for you to see this page. I am a 25 year old creator living in Portland OR. I recently graduated from Lewis and Clark college with a Bachelors in Fine Arts. </p>
-                <p> Here are a few of my skills:</p>
+                <p><strong> Here are a few of my skills:</strong></p>
+                <ul>
+                  <li> I have exprience managing and directing Art gallery spaces.</li>
+                  <li> I now know how to code in Markdown, Css, Html, and Bootstrap.</li>
+                  <li> I have a substantial training and background in Music, Visual Art, and Print Making.</li>
+                </ul>
               </div>
             </div>
             <div class="col-md-8">
-              <img class="self" src="https://static1.squarespace.com/static/578943d28419c2f2c872391f/5a209e160852299886f0a368/5a209e809140b77b54927cf7/1512087172731/Screen+Shot+2017-11-17+at+10.28.04+PM.png?format=500w">
-            </div>
-          </div>
-            <div class="row">
-              <div class="col-md-10">
-                <div class="well">
-                  <h3><span class="red">CURRENT WORK PORTFOLIO</span></h3>
-                  <ol>
-                    <li> Aethetics Web Page: <a href="https://lmkirkiii.github.io/A-E-S-T-H-E-T-I-C-WEB-PAGE/"><em><strong>Link here!</strong></em></a>
-                    <p> This site contains an exploration of grafic aesthetic sytles. Applied languages for the site: "css/html"</p>
-                    <li> Digital Art Museum: <a href="https://lmkirkiii.github.io/MUSE/"><em><strong>Link here!</strong></em></a>
-                    <p> This site is a non-profit css/html based digital art museum.</p>
-
-                  </ol>
+                <div class= "well">
+                  <img class="self" src="https://static1.squarespace.com/static/578943d28419c2f2c872391f/5a209e160852299886f0a368/5a209e809140b77b54927cf7/1512087172731/Screen+Shot+2017-11-17+at+10.28.04+PM.png?format=500w">
+                  <div class="col-md-2">
+                    <footer><em> Self Portrait</em> </footer>
+                  </div>
                 </div>
               </div>
           </div>
+            <div class="row">
+              <div class="well">
+                  <h3><span class="red">CURRENT WORK PORTFOLIO</span></h3>
+                  <ol>
+                    <li> Aethetics Web Site: <a href="https://lmkirkiii.github.io/A-E-S-T-H-E-T-I-C-WEB-PAGE/"><em><strong>Link here!</strong></em></a>
+                    <p> This site contains an exploration of grafic aesthetic sytles. Applied languages for the site: "css/html"</p>
+                    <li> Digital Art Museum: <a href="https://lmkirkiii.github.io/MUSE/"><em><strong>Link here!</strong></em></a>
+                    <p> This site is a non-profit css/html based digital art museum.</p>
+                    <li> Femme/ Female Indentifing Art History Site: <a href="https://lmkirkiii.github.io/FEMMEARTISTS/"><em><strong>Link here!</strong></em></a>
+                    <p> This site was developed for a elementary school class exposing students to femme and female indentifing artists through out art history.</p>
+                  </ol>
+              </div>
+            </div>
         </div>
       </body>
     </div>
