add a float to the page add a new image and a new well with contact info.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="col-md-4">
               <div class="well">
                 <h3 class="profile"><span class="red"> A BIT ABOUT ME</span> </h3>
+                <img class="newme" src="https://static1.squarespace.com/static/578943d28419c2f2c872391f/t/578db497ebbd1a6756fed26f/1468904627600/">
                 <p> Hello, Welcome to my digital landing pad! I am pleased for you to see this page. I am a 25 year old creator living in Portland OR. I recently graduated from Lewis and Clark college with a Bachelors in Fine Arts. </p>
                 <p><strong> Here are a few of my skills:</strong></p>
                 <ul>
@@ -45,6 +46,18 @@
                   </ol>
               </div>
             </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="well">
+              <h3><span class="red">CONTACT DETAILS</span></h3>
+              <ul>
+                <li> PHONE: 202-567-1202 </li>
+                <li> EMAIL: Lmkirkiii@gmail.com or <a href="mailto:lmkirkiii@gmail.com"><em><strong>LINK HERE!</strong></em>
+                <li> BILLING: 8253 NE BROADWAY 97220, Portland, OR</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </body>
     </div>
