--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <div class="col-md-4">
               <div class="well">
                 <h3 class="profile"><span class="red"> A BIT ABOUT ME</span> </h3>
-                <img class="newme" src="https://static1.squarespace.com/static/578943d28419c2f2c872391f/t/578db497ebbd1a6756fed26f/1468904627600/">
+                <img class="newme" src="css/img/Photo on 11-25-17 at 11.34 AM.jpg">
                 <p> Hello, Welcome to my digital landing pad! I am pleased for you to see this page. I am a 25 year old creator living in Portland OR. I recently graduated from Lewis and Clark college with a Bachelors in Fine Arts. </p>
                 <p><strong> Here are a few of my skills:</strong></p>
                 <ul>
-                  <li> I have exprience managing and directing Art gallery spaces.</li>
+                  <li> I have experience managing and directing Art gallery spaces.</li>
                   <li> I now know how to code in Markdown, Css, Html, and Bootstrap.</li>
                   <li> I have a substantial training and background in Music, Visual Art, and Print Making.</li>
                 </ul>
@@ -38,11 +38,11 @@
                   <h3><span class="red">CURRENT WORK PORTFOLIO</span></h3>
                   <ol>
                     <li> Aethetics Web Site: <a href="https://lmkirkiii.github.io/A-E-S-T-H-E-T-I-C-WEB-PAGE/"><em><strong>Link here!</strong></em></a>
-                    <p> This site contains an exploration of grafic aesthetic sytles. Applied languages for the site: "css/html"</p>
+                    <p> This site contains an exploration of graphic aesthetic sytles. Applied languages for the site: "css/html"</p>
                     <li> Digital Art Museum: <a href="https://lmkirkiii.github.io/MUSE/"><em><strong>Link here!</strong></em></a>
                     <p> This site is a non-profit css/html based digital art museum.</p>
                     <li> Femme/ Female Indentifing Art History Site: <a href="https://lmkirkiii.github.io/FEMMEARTISTS/"><em><strong>Link here!</strong></em></a>
-                    <p> This site was developed for a elementary school class exposing students to femme and female indentifing artists through out art history.</p>
+                    <p> This site was developed for a elementary school class exposing students to femme and female indentifing artists throughout art history.</p>
                   </ol>
               </div>
             </div>
