add change to index.html anchor tag.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <h3><span class="red">CONTACT DETAILS</span></h3>
               <ul>
                 <li> PHONE: 202-567-1202 </li>
-                <li> EMAIL: Lmkirkiii@gmail.com or <a href="mailto:lmkirkiii@gmail.com"><em><strong>LINK HERE!</strong></em>
+                <li> EMAIL: Lmkirkiii@gmail.com or <a href="mailto:lmkirkiii@gmail.com"><em><strong>LINK HERE!</strong></em></a>
                 <li> BILLING: 8253 NE BROADWAY 97220, Portland, OR</li>
               </ul>
             </div>
